2006-06-29  Hynek Hanke  <hanke@chopin>

	* config/modules/cicero.conf: Captions, debugging.

2006-06-27  Hynek Hanke  <hanke@chopin>

	* src/Makefile.am: Include Python and Guile files in the
	distribution.

2006-06-22  Olivier BERT  <bert_o@epita.fr>

	* Added support for the cicero TTS (french and english).
	    Cicero TTS URL: www.cam.org/~nico/cicero
	* Updated config/speechd.conf.in to add the declaration of the
	 cicero module.
	* The specific documentation and files for the cicero module are
	  still at the following URL:
	  http://www.terramitica.net/projects/speech-dispatcher

2006-05-17  Hynek Hanke  <hanke@chopin>

	* INSTALL: Users must run './configure' before 'make all'.

2006-05-13  Hynek Hanke  <hanke@chopin>

	* README.packagers: Most information about IBM TTS moved to INSTALL.

	* INSTALL: Info about IBM TTS output module from README.packagers.

	* ChangeLog: Comments about documentation moved to doc/ChangeLog.

2006-05-07  Gary Cramblitt <garycramblitt@comcast.net>

	* config/modules/espeak-generic.conf: Support for pitch adjustment
	and better mappings.

2006-04-25  Gary Cramblitt <garycramblitt@comcast.net>

	* src/c/clients/say/say.c, options.h, options.c:

2006-04-23  Gary Cramblitt <garycramblitt@comcast.net>

	* config/modules/ibmtts.conf: * src/modules/ibmtts.c: *
	configure.in: * src/modules/Makefile.am: Sound icon emulation.
	Requires libsndfile.  Also, permit customization of voices in
	config file.

	* src/tests/sound_icons.test: Simple test script for sound icons.

2006-04-22  Hynek Hanke  <hanke@chopin>

	* config/modules/espeak-generic.conf: eSpeak generic output module
	configuration.

	* config/speechd.conf.in: Added espeak-generic conf module
	(commented out).

	* src/server/speaking.c (speak): Break loop when SPEAKING only
	after checking for pause. Do not fill resume_requested with 1.

	* src/server/set.c (default_fd_set): Initialize
	paused_while_speaking to 0.

	* src/server/server.c (queue_message): Only copy settings and