@@ -1,3 +1,10 @@
+2006-06-29  Olivier BERT  <obert01@mistigri.org>
+
+	* src/modules/cicero.c: Updated Copyright in cicero.c
+	* spe/modules/cicero.c: Replaced a fixed buffer size by a dynamic 
+	  allocation
+
+
 2006-06-29  Hynek Hanke  <hanke@chopin>
 
 	* config/modules/cicero.conf: Captions, debugging.
